--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_C_STANDARD 99)
 add_executable(test_dns main.c dns.h dns.c)
 add_executable(client client.c dns.h dns.c)
 add_executable(server server.c dns.h dns.c)
+add_executable(localServer localServer.c dns.h dns.c)
